--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -46,7 +46,7 @@ jobs:
         run: | # PR の head_sha をタグに使用. 後続のステップで使うために IMAGE_TAG を出力
           IMAGE_TAG="${{ env.REGION }}-docker.pkg.dev/${{ env.GCP_PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.IMAGE_NAME }}:${{ github.event.pull_request.head.sha }}"
           echo "Building image with tag: $IMAGE_TAG"
-          docker build -t "$IMAGE_TAG" .
+          docker build -t "$IMAGE_TAG" ./projects/example-app
           docker push "$IMAGE_TAG"
           echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_OUTPUT
 
