Add service account for Cloud Run execution and update IAM bindings
- Specify `--service-account` flag in `push.yml` for Cloud Run deployment
- Create `example-app` service account for Cloud Run execution in `setup_wif.sh`
- Update IAM bindings to include necessary roles and permissions with `--no-user-output-enabled` flag

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -60,7 +60,9 @@ jobs:
           region: ${{ env.REGION }}
           image: ${{ steps.build.outputs.IMAGE_TAG }}
           # 🚨 外部からアクセスできるようにする設定。必要に応じて `--no-allow-unauthenticated` に変更
-          flags: '--allow-unauthenticated'
+          flags: |
+            --allow-unauthenticated
+            --service-account=example-app@akkie-dev.iam.gserviceaccount.com
 
       # 5. プルリクエストに URL をコメント
       - name: 'Add Preview URL to PR Comment'
