Update workflows to use the correct service account for Cloud Run deployment
- Replace `github-actions-sa` with `runway-github-actions-sa` in `cleanup.yml` and `production.yml`
- Simplify and clarify Docker build and push logic in `production.yml`
- Add comments to improve deployment step descriptions

--- a/.github/workflows/cleanup.yml
+++ b/.github/workflows/cleanup.yml
@@ -9,7 +9,7 @@ env:
   REGION: "asia-northeast1"
   # Workload Identity の設定値（前回のワークフローと共通）
   WORKLOAD_IDENTITY_PROVIDER: "projects/838262913247/locations/global/workloadIdentityPools/runway-github-pool/providers/runway-github-provider"
-  SERVICE_ACCOUNT: "github-actions-sa@akkie-dev.iam.gserviceaccount.com"
+  SERVICE_ACCOUNT: "runway-github-actions-sa@akkie-dev.iam.gserviceaccount.com"
 
 jobs:
   cleanup:
