--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -70,6 +70,7 @@ jobs:
 
       # 5. デプロイ完了メッセージ
       - name: 'Deployment Complete'
-        run: | # デプロイされたURLを確認したい場合は、以下のgcloud run services describeコマンドを使用します
+        # デプロイされたURLを確認したい場合は、以下のgcloud run services describeコマンドを使用します
+        run: | 
           echo "✅ Cloud Run Production Service ${{ env.PROD_SERVICE_NAME }} deployed successfully!"
           gcloud run services describe ${{ env.PROD_SERVICE_NAME }} --region ${{ env.REGION }} --format 'value(status.url)'
